<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:backgroundTint="@color/purple_200"
        android:layout_margin="16dp"
        android:contentDescription="@string/open_event"
        android:src="@drawable/ic_action_open"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.DetailActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/event_cover"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/image_placeholder"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/event_name"
                android:paddingHorizontal="16dp"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/event_cover"
                />

            <TextView
                android:id="@+id/event_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/event_summary"
                android:paddingHorizontal="16dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/material_dynamic_neutral_variant40"
                app:layout_constraintTop_toBottomOf="@id/event_name"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/event_info"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/event_summary">

                <ImageView
                    android:id="@+id/icon_owner"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_owner"
                    android:contentDescription="@string/icon_owner" />

                <TextView
                    android:id="@+id/event_owner"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/event_owner"
                    app:layout_constraintStart_toEndOf="@id/icon_owner"
                    app:layout_constraintTop_toTopOf="@id/icon_owner"
                    app:layout_constraintBottom_toBottomOf="@id/icon_owner"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
                    />

                <ImageView
                    android:id="@+id/icon_time"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/event_owner"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_time"
                    android:contentDescription="@string/icon_time" />

                <TextView
                    android:id="@+id/event_time"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/event_time"
                    app:layout_constraintStart_toEndOf="@id/icon_time"
                    app:layout_constraintTop_toTopOf="@id/icon_time"
                    app:layout_constraintBottom_toBottomOf="@id/icon_time"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
                    />

                <ImageView
                    android:id="@+id/icon_kuota"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/event_time"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_kuota"
                    android:contentDescription="@string/icon_kuota" />

                <TextView
                    android:id="@+id/event_kuota"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/event_kuota"
                    app:layout_constraintStart_toEndOf="@id/icon_kuota"
                    app:layout_constraintTop_toTopOf="@id/icon_kuota"
                    app:layout_constraintBottom_toBottomOf="@id/icon_kuota"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/event_info"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                android:padding="16dp"
                tools:text="@string/event_description"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>